--- a/MyCast/package.json
+++ b/MyCast/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mycast",
+  "name": "ikaada488-bcl2401-groupb-ikanyeng-adams-djs11",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
