--- a/MyCast/package.json
+++ b/MyCast/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ikaada488-bcl2401-groupb-ikanyeng-adams-djs11",
+  "name": "myCast",
   "private": true,
   "version": "0.0.0",
   "type": "module",
